src/main/java/com/example/tms/error/NoSuchAssigneeException.java
package com.example.tms.error;

public class NoSuchAssigneeException extends RuntimeException {
    public NoSuchAssigneeException(String message) {super(message);}
}
